src/components/Header.module.css
header {
  background-color: #333;
  color: white;
  padding: 1rem 2rem;
}

nav {
  display: flex;
  justify-content: space-between; /* Titel vänster, länkar höger */
  align-items: center;
}

.navLinks {
  display: flex;
  gap: 1rem; /* Avstånd mellan länkarna */
}

.navLink {
  padding: 0.5rem 1rem;
  border-radius: 8px;
  text-decoration: none;
  color: white;
  background-color: #333333;
  transition: background-color 0.3s, transform 0.2s;
}

.navLink:hover {
  background-color: #2759c5;
  transform: scale(1.05);
}

.title {
  font-size: 1.5rem;
  font-weight: bold;
}

